lien vers fichier css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="présentation de Michaël DEVOS">
     <meta name="keywords" content="présentation Michaël DEVOS">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>DEVOS Michaël</title>
 </head>
 <body>
